# kuromi-browser

./: .gitignore  README.md  pyproject.toml
docs/: CONTRIBUTING.md  CONTRIBUTING.vi.md  README.md  README.vi.md  RUNBOOK.md  RUNBOOK.vi.md  agent-guide.md  api-reference.md  architecture.md  configuration.md  getting-started.md  stealth-guide.md
docs/api/: browser.md  element.md  models.md  page.md  session.md
kuromi_browser/: __init__.py  interfaces.py  models.py  page.py
kuromi_browser/actions/: __init__.py  chain.py  forms.py  keyboard.py  mouse.py  scroll.py
kuromi_browser/agent/: __init__.py  actions.py  agent.py
kuromi_browser/ai/: __init__.py  dom_serializer.py  task_parser.py  vision.py
kuromi_browser/browser/: __init__.py  browser.py  context.py  hooks.py  profiles.py  tabs.py  windows.py
kuromi_browser/cdp/: __init__.py  connection.py  launcher.py  session.py
kuromi_browser/config/: __init__.py  defaults.py  env.py  loader.py  options.py
kuromi_browser/core/: __init__.py  base.py  sync.py
kuromi_browser/dom/: __init__.py  element.py  locator.py  service.py
kuromi_browser/elements/: __init__.py  base.py  browser_element.py  iframe.py  locator.py  none_element.py  session_element.py  shadow.py
kuromi_browser/events/: __init__.py  bus.py  types.py
kuromi_browser/llm/: __init__.py  anthropic.py  base.py  openai.py
kuromi_browser/mcp/: __init__.py  server.py  tools.py
kuromi_browser/media/: __init__.py  compare.py  downloader.py  pdf.py  recorder.py  screenshot.py
kuromi_browser/network/: __init__.py  filter.py  har.py  interceptor.py  listener.py  monitor.py  websocket.py
kuromi_browser/pages/: __init__.py  browser_page.py  cookies.py  hybrid_page.py  session_page.py
kuromi_browser/plugins/: __init__.py  base.py  loader.py  middleware.py
kuromi_browser/session/: __init__.py  client.py  element.py  response.py
kuromi_browser/stealth/: CLAUDE.md  __init__.py
kuromi_browser/waiters/: __init__.py  conditions.py
kuromi_browser/watchdogs/: __init__.py
tests/: __init__.py  conftest.py  test_actions.py  test_config.py  test_elements.py  test_fingerprint.py  test_models.py  test_network.py
(+14 files in other folders)
