[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kuromi-browser"
version = "0.1.0"
description = "Stealthy Python browser automation library with AI/LLM integration and CDP stealth"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kuromi", email = "kuromi@example.com" }
]
keywords = [
    "browser-automation",
    "web-scraping",
    "stealth",
    "anti-detection",
    "cdp",
    "playwright",
    "selenium",
    "ai",
    "llm",
    "fingerprint"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "websockets>=12.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pydantic>=2.0",
    "curl_cffi>=0.6.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
]
full = [
    "kuromi-browser[llm]",
    "browserforge>=1.0",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpserver>=1.0",
    "ruff>=0.3",
    "pyright>=1.1",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/kurom1ii/kuromi-browser"
Documentation = "https://github.com/kurom1ii/kuromi-browser#readme"
Repository = "https://github.com/kurom1ii/kuromi-browser"
Issues = "https://github.com/kurom1ii/kuromi-browser/issues"

[tool.hatch.build.targets.wheel]
packages = ["kuromi_browser"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
